--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <p class="view">
         <a href="https://scholar.google.com/citations?user=Ex1TH2UAAAAJ&hl=en" target="_blank"> <img class="icon" src="assets/img/gscholar.png" alt="GScholar link"/></a>
         <a href="https://www.linkedin.com/in/itsyuchao" target="_blank"> <img class="icon" src="assets/img/linkedin.svg" alt="Linkedin link"/></a>
-        <a href="https://twitter.com/itsyuchao" target="_blank"> <img class="icon" src="assets/img/twitter.svg" alt="Twitter link"/></a>
+        <a href="https://bsky.app/profile/itsyuchao.bsky.social" target="_blank"> <img class="icon" src="assets/img/bsky.svg" alt="Bluesky link"/></a>
         <a href="mailto:wang.yuchao@duke.edu"> <img class="icon" src="assets/img/email.png" alt="Email"/></a></p>
         <p><big>
         <a href="./research.html" >Research</a>.
